...
    private let logoView = {
        let view = UIImageView(image: UIImage(named: "Logo_of_Unsplash"))
        return view
    }()
    private let loginButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "Authenticate"
        button.setTitle("Войти", for: .normal)
        button.backgroundColor = UIColor(named: "YP White")
        button.setTitleColor(UIColor(named: "YP Black"), for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 17)
        button.layer.masksToBounds = true
        button.layer.cornerRadius = 16
...
