...
        bgImageView.layer.masksToBounds = true
        bgImageView.layer.cornerRadius = 16
        return bgImageView
    }()
    var likeButton = {
        let likeButton = UIButton()
        likeButton.accessibilityIdentifier = "likeButtonIdentifier"
        return likeButton
    }()
    var dateLabel = {
        let dateLabel = UILabel()
        dateLabel.textColor = UIColor.ypWhite
        dateLabel.font = UIFont.systemFont(ofSize: 13)
...
